<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_fb"
        android:layout_marginTop="@dimen/margin_top_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="image_fb"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/register_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint"
        app:layout_constraintTop_toBottomOf="@id/image_fb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/large_horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:autofillHints=""
        android:inputType=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/register_password_edit_text"
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_password"
        app:layout_constraintTop_toBottomOf="@id/register_email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/horizontal_margin"
        android:autofillHints=""
        android:inputType=""
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/register_button_login"
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:text="@string/register_btn_login"
        android:layout_marginStart="@dimen/normal_horizontal_margin"
        android:layout_marginEnd="@dimen/normal_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/register_password_edit_text"
        android:layout_margin="@dimen/horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/register_text_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_for_facebook"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/register_button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/register_text_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@id/register_text_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/horizontal_margin"/>

    <ImageView
        android:id="@+id/image_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_help_24"
        app:layout_constraintTop_toTopOf="@+id/register_text_forgot"
        app:layout_constraintStart_toEndOf="@+id/register_text_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_helper_margin" />


</androidx.constraintlayout.widget.ConstraintLayout>